@@ -36,8 +36,7 @@ from pyworkflow.protocol.params import (PointerParam, FloatParam,
                                         LEVEL_ADVANCED, Positive, BooleanParam)
 
 from .protocol_base import ProtCryosparcBase
-from ..convert import (convertCs2Star, readSetOfParticles,
-                       cryosparcToLocation, rowToCtfModel, rowToAlignment)
+from ..convert import (convertCs2Star, cryosparcToLocation, rowToCtfModel, rowToAlignment)
 from ..utils import (addComputeSectionParams, calculateNewSamplingRate,
                      cryosparcValidate, gpusValidate, enqueueJob,
                      waitForCryosparc, clearIntermediateResults, copyFiles)
