@@ -1,3 +1,6 @@
+April 22, 2025  - **v4.2.2**
+                Compatibility with cryoSPARC v4.7.0
+
 March 27, 2025 - **v4.2.1**
                  Fixing errors related the classification protocols
 
